objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Aadhar__c</fullName>
        <label>Aadhar</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>District</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN__c</fullName>
        <label>PAN</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>sin</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer</label>
    <nameField>
        <displayFormat>C ID-{0000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>